# fga-crm

./: .env.example  .gitignore  CLAUDE.md  FUNDING_MULTI_SOURCE_CRM_HANDOFF.md  FUNDING_SYNC_INTEGRATION.md  Makefile  README.md  REPO_MAP.md  UI_GUIDELINES.md  docker-compose.sonar.yml  docker-compose.vps.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260430_1738_daa19e2fefdb_baseline.py  20260501_1455_eb85b5950356_add_source_to_deal.py  20260501_1500_a1b2c3d4e5f6_reconcile_db_drift.py  20260511_2000_a3f8c1d92e4b_funding_sync.py  20260527_1000_ecc9c759d74d_service_auth_api_keys.py  20260624_1000_geo_module.py  20260624_1100_geo_organization_id.py  20260701_1000_mcp_tool_usage.py  20260701_1200_trends_module.py  20260701_1400_geo_audit_jobs.py  20260702_1000_enrichment_module.py  20260702_1600_mt_core.py  20260702_1700_mt_core_tables.py  20260702_1800_mt_aux_tables.py  20260702_1900_mt_contract.py  20260702_2000_mt_softdelete.py  20260702_2100_enrichment_bulk.py  20260702_2200_mt_unique_composite.py  20260703_1000_enrichment_verified_flags.py  20260703_1100_geo_brand_slug_composite_unique.py  20260708_1000_ai_scoring.py  20260708_1400_ai_qualification.py  20260708_1600_ai_insights.py  20260709_1000_lead_signals.py
backend/app/: config.py  main.py
backend/app/api/v1/: activities.py  admin_api_keys.py  ai.py  ai_workflows.py  auth.py  companies.py  contacts.py  dashboard.py  deals.py  drafts_review.py  email_templates.py  emails.py  enrichment.py  enrichment_webhook.py  geo.py  geo_audit.py  integrations.py  lead_engine.py  mcp_usage.py  organizations.py  router.py  search.py  tasks.py  trends.py  users.py
backend/app/api/v1/geo/: __init__.py  _common.py  brands.py  dashboard.py  gaps.py  health.py  prompts.py  runs.py
backend/app/api/v1/integrations/: __init__.py  _auth.py  nomo.py  plein_phare.py  startup_radar.py  startup_radar_audit.py
backend/app/api/v1/lead_engine/: __init__.py  _common.py  outreach_routes.py  signals.py
backend/app/core/: __init__.py  deps.py  pricing.py  rbac.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  activity.py  ai_workflow.py  api_key.py  base.py  company.py  contact.py  deal.py  email_template.py  enrichment.py  geo.py  lead_engine.py  mcp_tool_usage.py  organization.py  tag.py  task.py  trends.py  user.py  webauthn_credential.py
backend/app/schemas/: __init__.py  activity.py  ai.py  ai_workflows.py  common.py  company.py  contact.py  dashboard.py  deal.py  draft_review.py  email.py  enrichment.py  geo.py  geo_audit.py  import_export.py  integration.py  lead_engine.py  mcp_usage.py  organization.py  search.py  task.py  trends.py  user.py
backend/app/services/: api_keys.py  compass.py  email.py  openai_strict.py  startup_radar.py  startup_radar_sync.py  sync_status.py
backend/app/services/ai_workflows/: __init__.py  client.py  insights.py  outreach.py  qualification.py  runs.py  scoring.py
backend/app/services/enrichment/: __init__.py  _pipeline.py  bulk_callback.py  credit_ledger.py  crm_writer.py  factory.py  freshness.py  orchestrator.py  ports.py  provenance.py  rgpd.py  roles.py  suppression.py  waterfall.py
backend/app/services/enrichment/adapters/: __init__.py  gouv.py  icypeas.py  mock.py
backend/app/services/enrichment/modes/: __init__.py  company.py  contacts.py
backend/app/services/geo/: alerts.py  audit.py  collector.py  extractor.py  pipeline.py  scorer.py
backend/app/services/lead_engine/: __init__.py  detector.py
backend/app/services/startup_radar_sync/: __init__.py  _common.py  activities.py  audits.py  people.py  runner.py  startups.py
backend/app/services/trends/: __init__.py  cache.py  dataforseo_provider.py  mock_provider.py  orchestrator.py  provider.py  recommender.py  searchapi_provider.py  serpapi_provider.py
backend/app/tasks/: celery_app.py  enrichment.py  funding_sync.py  geo.py  lead_engine.py  startup_radar_full_sync.py  trends.py
backend/scripts/migrations/: 2026-04-30_deal_pricing.sql
backend/tests/: conftest.py
backend/tests/api/: test_activities.py  test_ai.py  test_ai_workflows.py  test_api_keys.py  test_auth.py  test_company_audit_generate.py  test_contacts.py  test_dashboard.py  test_deals.py  test_drafts_review.py  test_email_templates.py  test_emails.py  test_enrichment_api.py  test_enrichment_bulk_callback.py  test_enrichment_bulk_reliability.py  test_enrichment_bulk_submit.py  test_enrichment_contacts.py  test_enrichment_contacts_bulk.py  test_enrichment_webhook_hardening.py  test_filters.py  test_funding_sync.py  test_geo.py  test_geo_audit.py  test_health.py  test_import.py  test_integrations_nomo.py  test_integrations_plein_phare.py  test_lead_engine.py  test_mcp_usage.py  test_multi_tenant_isolation.py  test_organizations.py  test_rbac.py  test_registration.py  test_search.py  test_startup_radar_sync.py  test_tasks.py  test_trends_api.py  test_users.py
backend/tests/unit/: test_db_session.py  test_email_service.py  test_enrichment_adapters.py  test_enrichment_gouv.py  test_enrichment_icypeas.py  test_enrichment_orchestrator.py  test_enrichment_quota.py  test_enrichment_rgpd.py  test_enrichment_roles.py  test_enrichment_services_db.py  test_enrichment_update_contact.py  test_geo_audit.py  test_geo_extractor.py  test_multitenant_unique.py  test_pricing.py  test_schemas.py  test_security.py  test_trends_orchestrator.py  test_trends_provider.py  test_trends_recommender.py  test_trends_searchapi.py  test_trends_serpapi.py
docs/: AI_WORKFLOWS.md  ARCHITECTURE.md  CODE_HEALTH_REPORT.md  ENRICHMENT_MODULE.md  LEAD_ENGINE_VISION.md  PORTS.md  README.md
docs/adr/: 000-template.md  001-dates-string-pydantic.md  002-sqlite-tests.md  003-rbac-centralized.md  004-startup-radar-sync.md  (+1 more)
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
tools/: README.md  email_finder.py
(+181 files in other folders)
