[tool.poetry]
name = "fga-crm-backend"
version = "1.0.0"
description = "Backend API for FGA CRM - Fast Growth Advisors CRM"
authors = ["Hervé"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.116.0"
starlette = ">=0.47.2"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

# Redis & Task Queue
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.6"}

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
webauthn = "^2.2.0"

# HTTP Client
httpx = "^0.26.0"

# AI
anthropic = "^0.43.0"
openai = "^1.12.0"

# Email
aiosmtplib = "^3.0.1"
aioimaplib = "^1.1.0"

# Encryption
cryptography = "^44.0.1"

# Validation & Config
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# File Storage (S3-compatible)
minio = "^7.2.3"

# Rate limiting
slowapi = "^0.1.9"

# Utilities
python-multipart = "^0.0.31"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^26.3.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
skip = ["migrations"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
  "alembic/versions",  # fichiers de migration auto-generes par alembic
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "S",    # flake8-bandit (securite)
  "T20",  # flake8-print (pas de print en prod)
]
ignore = [
  "E501",  # line too long — gere par black/formatter
  "S101",  # assert autorise dans les tests
  "S105",  # faux positifs sur hardcoded passwords (config dev)
  "S106",  # idem
  "B008",  # Depends() dans FastAPI = normal
  "B904",  # raise from dans except — pattern FastAPI HTTPException
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"app/core/config.py" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
