[project]
name = "fga-crm-backend"
version = "1.0.0"
description = "Backend API for FGA CRM - Fast Growth Advisors CRM"
authors = [{ name = "Hervé" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # Web Framework
    "fastapi>=0.139.0,<0.140.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.25,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    # Redis & Task Queue
    "redis>=5.0.1,<6.0.0",
    "celery[redis]>=5.3.6,<6.0.0",
    # Authentication (PyJWT plutot que python-jose : ce dernier tire ecdsa,
    # vulnerable Minerva P-256 sans patch — GHSA-wj6h-64fc-37mp).
    "pyjwt[crypto]>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.1.2,<5.0.0",
    "webauthn>=3.0.0,<4.0.0",
    # HTTP Client
    "httpx>=0.26.0,<0.27.0",
    # AI
    "anthropic>=0.43.0,<0.44.0",
    "openai>=1.12.0,<2.0.0",
    # Email
    "aiosmtplib>=5.1.1,<6.0.0",
    "aioimaplib>=1.1.0,<2.0.0",
    # Encryption
    "cryptography>=49.0.0,<50.0.0",
    # Validation & Config
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",
    # File Storage (S3-compatible)
    "minio>=7.2.3,<8.0.0",
    # Rate limiting
    "slowapi>=0.1.9,<0.2.0",
    # Utilities
    "python-multipart>=0.0.31,<0.0.32",
    "python-dotenv>=1.0.0,<2.0.0",
]

# Groupe dev (installe par defaut par `uv sync`, exclu par `--no-dev`).
[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=26.3.1,<27.0.0",
    "isort>=5.13.2,<6.0.0",
    "mypy>=1.8.0,<2.0.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "ruff>=0.15.0,<0.16.0",
]

# App non-packagee (run en place, equivalent de l'ancien `poetry install --no-root`).
[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
skip = ["migrations"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
  "alembic/versions",  # fichiers de migration auto-generes par alembic
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "S",    # flake8-bandit (securite)
  "T20",  # flake8-print (pas de print en prod)
]
ignore = [
  "E501",  # line too long — gere par black/formatter
  "S101",  # assert autorise dans les tests
  "S105",  # faux positifs sur hardcoded passwords (config dev)
  "S106",  # idem
  "B008",  # Depends() dans FastAPI = normal
  "B904",  # raise from dans except — pattern FastAPI HTTPException
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"app/core/config.py" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
